--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,9 @@
     </script>
     <ul id="top-menu">
       <li><a href="{{ '/' | relative_url }}">トップページ</a></li>
+      <li><a href="{{ '/BybitOrder' | relative_url }}">Bybit注文ツール</a></li>
+      <li><a href="{{ '/execution' | relative_url }}">Bybit約定通知</a></li>
+      <li><a href="{{ '/BitMEXOrder' | relative_url }}">BitMex注文ツール</a></li>
     </ul>
     <!------------ メニューバー ------------->
     
@@ -49,9 +52,9 @@
       <sidemenu>
 	<ul>
 	  <li class="sidemenu"><a href="{{ '/' | relative_url }}">トップページ</a></li>
-	  <li class="sidemenu"><a href="{{ '/sub1' | relative_url }}">サブアイテム #1</a></li>
-	  <li class="sidemenu"><a href="{{ '/sub2' | relative_url }}">サブアイテム #2</a></li>
-	  <li class="sidemenu"><a href="{{ '/sub3' | relative_url }}">サブアイテム #3</a></li>
+      <li><a href="{{ '/BybitOrder' | relative_url }}">Bybit注文ツール</a></li>
+      <li><a href="{{ '/execution' | relative_url }}">Bybit約定通知</a></li>
+      <li><a href="{{ '/BitMEXOrder' | relative_url }}">BitMex注文ツール</a></li>
 	</ul>
       </sidemenu>
 
