--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <!---
   this default.html is based on 
-    https://github.com/pages-themes/dinky
+    https://github.com/pages-themes/Hacker
 --->
 
 <html lang="{{ site.lang | default: "en-US" }}">
@@ -64,7 +64,7 @@
       </section>
       
       <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Hacker theme</small></p>
         <p><a class="buttons github" href="{{ site.github.repository_url }}">View On GitHub</a></p>
       </footer>
     </div>
